--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,24 @@
 @import url("open-props/zindex");
 @import url("open-props/sizes");
 
+@font-face {
+  font-family: Silkscreen;
+  src: url("/fonts/Silkscreen-Regular.woff2") format("woff2"),
+    url("/fonts/Silkscreen-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Silkscreen;
+  src: url("/fonts/Silkscreen-Bold.woff2") format("woff2"),
+    url("/fonts/Silkscreen-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 :where(html) {
   --font-silkscreen: "Silkscreen", serif, var(--font-system-ui);
 }
